--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@
   body {
     @apply bg-gray-50 font-sans;
   }
+  
 }
 
 @layer components {
@@ -52,5 +53,26 @@
   .status-not-applied {
     @apply bg-red-100 text-red-800;
   }
+
+  .btn-primary {
+    @apply bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-6 rounded-lg transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2;
+  }
+  
+  .btn-secondary {
+    @apply bg-white hover:bg-gray-50 text-gray-900 font-medium py-3 px-6 rounded-lg border border-gray-300 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2;
+  }
+  
+  .input-field {
+    @apply w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-colors duration-200 placeholder-gray-600 bg-slate-100;
+  }
+  
+  .card {
+    @apply bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow duration-200;
+  }
+
+  .checkbox{
+    @apply h-4 w-4 text-primary-600 border-gray-300 rounded focus:ring-primary-500 mt-1
+  }
+  
   
 }
