--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,7 @@
   }
   
   .input-field {
-    @apply w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-colors duration-200 placeholder-gray-600 bg-slate-100;
+    @apply w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200 placeholder-gray-600 bg-slate-100 text-slate-700;
   }
   
   .card {
@@ -71,7 +71,7 @@
   }
 
   .checkbox{
-    @apply h-4 w-4 text-primary-600 border-gray-300 rounded focus:ring-primary-500 mt-1
+    @apply h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500 mt-1
   }
   
   
